--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <h1>i love my self</h1>
+    <p1> hows the life going</p1>
   </head>
   <body>
     <div id="root"></div>
